--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-cron": "^2.0.3",
     "puppeteer": "^2.1.1"
   },
   "engines": {
